--- a/korf-ui/index.html
+++ b/korf-ui/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Svelte + TS</title>
   </head>
-  <body>
+  <body class=" bg-white dark:bg-gray-900 text-gray-600 dark:text-gray-400 antialiased">
+
+
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
