--- a/korf-ui/index.html
+++ b/korf-ui/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte + TS</title>
+    <title>Korf</title>
   </head>
   <body class=" bg-white dark:bg-gray-900 text-gray-600 dark:text-gray-400 antialiased">
-
-
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
